<resources>
    <string name="app_name">MovieMe</string>
    <string name="movie_title_placeholder">Spiderman</string>
    <string name="movie_year_placeholder">2020</string>
    <string name="movie_rating_placeholder">9.9</string>
    <string name="voter">Voter</string>
    <string name="rating">Rating</string>
    <string name="favorites">Favorite</string>
    <string name="loading">Loading...</string>
    <string name="voter_placeholder">954</string>
    <string name="author_placeholder">Dwi Teguh Prasetyo</string>
    <string name="content_placeholder">Good Film!</string>
    <string name="reviews">Review</string>

    <string-array name="movie_category">
        <item>Now Playing</item>
        <item>Upcoming</item>
    </string-array>

    <string-array name="tvshow_category">
        <item>Airing Today</item>
        <item>On The Air</item>
    </string-array>

    <string-array name="favorite_category">
        <item>Movie</item>
        <item>TV Show</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="most_popular">Most Popular</string>
    <string name="backdrop">backdrop</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite">Favorite</string>
</resources>
